--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             <div class="d-flex flex-column justify-content-center  align-items-center">
 
                 <div class="col-12 col-sm-10 col-xl-8 col-xxl-6 row row-cols-1 row-cols-md-2 mb-md-3 start-block-title d-flex justify-content-center align-items-center">
-                    <img src="images/logo/icon.svg"/>
-                    <p >
+                    <img class="p-0" src="images/logo/icon.svg"/>
+                    <p class="p-0 m-0">
                         Школа кулинарии и здорового питания "CookWell"
                     </p>
                 </div>
@@ -87,8 +87,8 @@
                         Школа кулинарного мастерства "CookWell" - это место, где страсть к кулинарии сочетается с искусством здорового питания. Мы предлагаем интенсивные и увлекательные курсы, разработанные для тех, кто хочет расширить свои кулинарные горизонты, независимо от уровня опыта.
                     </p>
                 </div>
-                <div class="col-8 col-sm-6 col-lg-4 start-block-button ">
-                    <button class="btn">
+                <div class="col-8 col-sm-6 col-lg-4 start-block-button">
+                    <button class="btn btn-orange">
                         Получить бесплатный курс
                     </button>
                 </div>
@@ -101,64 +101,149 @@
 
          <div class="container">
 
-             <div class="courses row row-cols-1 row-cols-lg-2 gy-5">
+             <div class="courses row row-cols-1 row-cols-lg-2 gy-5 mb-5">
                  <div class="col course">
-                     <img src="images/courses/course1.png"/>
+                     <img class="course-image" src="images/courses/course1.png"/>
                      <p class="course-title">
                          Основы здорового питания
                      </p>
                      <p class="course-text">
                          В этом курсе вы узнаете основные принципы здорового питания, включая рацион, баланс питательных веществ и правильный выбор продуктов. Приготовление питательных и вкусных блюд станет легким и привычным для вас после прохождения этого курса.
                      </p>
+                     <button class="btn course-button">
+                         Подробнее
+                     </button>
                  </div>
+
                  <div class="col course">
-                     <img src="images/courses/course2.png"/>
+                     <img class="course-image" src="images/courses/course2.png"/>
                      <p class="course-title">
                          Здоровые перекусы для энергии и вкуса
                      </p>
                      <p class="course-text">
                          В этом курсе мы научим вас приготовлению здоровых перекусов, которые помогут поддерживать вашу энергию и концентрацию в течение всего дня. Вы узнаете, какие продукты лучше всего подходят для перекусов и как правильно их комбинировать.
                      </p>
+                     <button class="btn course-button">
+                         Подробнее
+                     </button>
                  </div>
                  <div class="col course">
-                     <img src="images/courses/course3.png"/>
+                     <img class="course-image" src="images/courses/course3.png"/>
                      <p class="course-title">
                          Здоровый завтрак: энергия на целый день
                      </p>
                      <p class="course-text">
                          Узнайте, как правильно начать свой день с здорового завтрака, который даст вам энергию и питательные вещества на целый день. Мы расскажем вам о лучших завтраках для здоровья сердца, сбалансированных завтраках для веса и многом другом.
                      </p>
+                     <button class="btn course-button">
+                         Подробнее
+                     </button>
                  </div>
                  <div class="col course">
-                     <img src="images/courses/course4.png"/>
+                     <img class="course-image" src="images/courses/course4.png"/>
                      <p class="course-title">
                          Здоровые обеды на каждый день
                      </p>
                      <p class="course-text">
                          Узнайте, как приготовить сбалансированные и вкусные обеды, которые будут дарить вам энергию и радость. Мы поделимся с вами рецептами простых и быстрых обедов, которые подходят для занятого образа жизни.
                      </p>
+                     <button class="btn course-button">
+                         Подробнее
+                     </button>
                  </div>
                  <div class="col course">
-                     <img src="images/courses/course5.png"/>
+                     <img class="course-image" src="images/courses/course5.png"/>
                      <p class="course-title">
                          Здоровый ужин: вкусно и с пользой
                      </p>
                      <p class="course-text">
                          В этом курсе мы научим вас готовить здоровые и сытные ужины, которые помогут вам расслабиться и восстановить силы после долгого дня. Вы узнаете рецепты блюд для всей семьи, которые подарят вам удовольствие и пользу.
                      </p>
+                     <button class="btn course-button">
+                         Подробнее
+                     </button>
                  </div>
                  <div class="col course">
-                     <img src="images/courses/course6.png"/>
+                     <img class="course-image" src="images/courses/course6.png"/>
                      <p class="course-title">
                          Десерты без вреда для фигуры
                      </p>
                      <p class="course-text">
                          В этом курсе мы научим вас готовить сладости, которые будут не только вкусными, но и полезными для вашего тела. Вы узнаете о заменителях сахара, использовании здоровых жиров и других секретах создания десертов без вреда для фигуры.
                      </p>
+                     <button class="btn course-button">
+                         Подробнее
+                     </button>
                  </div>
              </div>
-         </div>
 
+             <div class="bonus d-flex flex-column align-items-center">
+                 <div class="bonus-title">
+                     <p class="bonus-title-main">
+                         Получите бесплатный курс
+                     </p>
+                     <p class="bonus-title-name">
+                         "Введение в здоровое питание: 7 дней, 7 простых шагов"!
+                     </p>
+                 </div>
+
+                 <div class="bonus-images row row-cols-1 row-cols-lg-2 m-0 g-0">
+                     <img class="col" src="./images/bonus_course/1.png"/>
+                     <img class="col" src="./images/bonus_course/2.png"/>
+                 </div>
+
+                 <div class="bonus-text col-12 col-lg-10 py-3">
+                     <p class="bonus-text-title">
+                         Из курса вы узнаете:
+                     </p>
+                     <p class="bonus-text-info ms-5">
+                         Какие продукты являются основой здорового рациона.
+                         Как правильно составить свой рацион на неделю.
+                         Какие простые изменения в повседневной жизни помогут вам улучшить ваше питание.
+                         Полезные советы и рецепты для здоровых завтраков, обедов и ужинов.
+                     </p>
+                 </div>
+
+                 <div class="bonus-form col-12 row row-cols-1 row-cols-lg-3 gy-3 gy-lg-0">
+                     <div class="form-group col col-lg-4 ">
+                         <input class="form-control" placeholder="Введите ваше имя"/>
+                     </div>
+                     <div class="form-group col col-lg-5">
+                         <input class="form-control" placeholder="Введите ваш email"/>
+                     </div>
+                     <div class="ms-auto col col-lg-3 col-xxl-2">
+                         <button class="btn btn-orange">
+                             Отправить
+                         </button>
+                     </div>
+                 </div>
+
+
+                <div class="bonus-comment mt-2">
+                    <p>
+                        Заполните форму и наш менеджер свяжется с вами. Все совершенно бесплатно!
+                    </p>
+                </div>
+
+             </div>
+
+             <div class="about container d-flex flex-column align-items-center">
+                 <div class="col-10 school-info">
+                    <p class="school-info-title">
+                        О школе
+                    </p>
+                     <div class="row row-cols-1 row-cols-lg-2 d-flex align-items-center">
+                         <p class="col col-lg-6 school-info-text text-center text-lg-start">
+                             "CookWell" - это уникальная школа, где мы делаем здоровое питание вкусным и доступным для всех. Наша миссия - вдохновить и помочь людям принять здоровый образ жизни через правильное питание и кулинарное мастерство.
+                         </p>
+                         <img class="col col-lg-5 ms-auto" src="images/about_school.png"/>
+                     </div>
+                 </div>
+             </div>
+
+
+
+         </div>
      </main>
 
 
