--- a/index.html
+++ b/index.html
@@ -89,95 +89,112 @@
                 </div>
                 <div class="col-8 col-sm-6 col-lg-4 start-block-button">
                     <button class="btn btn-orange">
-                        Получить бесплатный курс
+                        <a class="nav-link" href="#bonus">
+                            Получить бесплатный курс
+                        </a>
                     </button>
                 </div>
             </div>
         </div>
 
-         <p class="courses-title text-center">
-             Список доступных курсов
-         </p>
 
-         <div class="container">
+         <div class="container d-flex flex-column align-items-center">
 
-             <div class="courses row row-cols-1 row-cols-lg-2 gy-5 mb-5">
-                 <div class="col course">
-                     <img class="course-image" src="images/courses/course1.png"/>
-                     <p class="course-title">
-                         Основы здорового питания
-                     </p>
-                     <p class="course-text">
-                         В этом курсе вы узнаете основные принципы здорового питания, включая рацион, баланс питательных веществ и правильный выбор продуктов. Приготовление питательных и вкусных блюд станет легким и привычным для вас после прохождения этого курса.
-                     </p>
-                     <button class="btn course-button">
-                         Подробнее
-                     </button>
-                 </div>
+             <div id="courses">
+                 <p class="courses-title text-center">
+                     Список доступных курсов
+                 </p>
 
-                 <div class="col course">
-                     <img class="course-image" src="images/courses/course2.png"/>
-                     <p class="course-title">
-                         Здоровые перекусы для энергии и вкуса
-                     </p>
-                     <p class="course-text">
-                         В этом курсе мы научим вас приготовлению здоровых перекусов, которые помогут поддерживать вашу энергию и концентрацию в течение всего дня. Вы узнаете, какие продукты лучше всего подходят для перекусов и как правильно их комбинировать.
-                     </p>
-                     <button class="btn course-button">
-                         Подробнее
-                     </button>
-                 </div>
-                 <div class="col course">
-                     <img class="course-image" src="images/courses/course3.png"/>
-                     <p class="course-title">
-                         Здоровый завтрак: энергия на целый день
-                     </p>
-                     <p class="course-text">
-                         Узнайте, как правильно начать свой день с здорового завтрака, который даст вам энергию и питательные вещества на целый день. Мы расскажем вам о лучших завтраках для здоровья сердца, сбалансированных завтраках для веса и многом другом.
-                     </p>
-                     <button class="btn course-button">
-                         Подробнее
-                     </button>
-                 </div>
-                 <div class="col course">
-                     <img class="course-image" src="images/courses/course4.png"/>
-                     <p class="course-title">
-                         Здоровые обеды на каждый день
-                     </p>
-                     <p class="course-text">
-                         Узнайте, как приготовить сбалансированные и вкусные обеды, которые будут дарить вам энергию и радость. Мы поделимся с вами рецептами простых и быстрых обедов, которые подходят для занятого образа жизни.
-                     </p>
-                     <button class="btn course-button">
-                         Подробнее
-                     </button>
-                 </div>
-                 <div class="col course">
-                     <img class="course-image" src="images/courses/course5.png"/>
-                     <p class="course-title">
-                         Здоровый ужин: вкусно и с пользой
-                     </p>
-                     <p class="course-text">
-                         В этом курсе мы научим вас готовить здоровые и сытные ужины, которые помогут вам расслабиться и восстановить силы после долгого дня. Вы узнаете рецепты блюд для всей семьи, которые подарят вам удовольствие и пользу.
-                     </p>
-                     <button class="btn course-button">
-                         Подробнее
-                     </button>
-                 </div>
-                 <div class="col course">
-                     <img class="course-image" src="images/courses/course6.png"/>
-                     <p class="course-title">
-                         Десерты без вреда для фигуры
-                     </p>
-                     <p class="course-text">
-                         В этом курсе мы научим вас готовить сладости, которые будут не только вкусными, но и полезными для вашего тела. Вы узнаете о заменителях сахара, использовании здоровых жиров и других секретах создания десертов без вреда для фигуры.
-                     </p>
-                     <button class="btn course-button">
-                         Подробнее
-                     </button>
+                 <div class="courses d-flex justify-content-center row row-cols-1 row-cols-lg-2 gy-5 mb-5">
+                     <div class="col col-xxl-5">
+                         <div class="course-block">
+                             <img class="course-image" src="images/courses/course1.png"/>
+                             <p class="course-title">
+                                 Основы здорового питания
+                             </p>
+                             <p class="course-text">
+                                 В этом курсе вы узнаете основные принципы здорового питания, включая рацион, баланс питательных веществ и правильный выбор продуктов. Приготовление питательных и вкусных блюд станет легким и привычным для вас после прохождения этого курса.
+                             </p>
+                             <button class="btn course-button">
+                                 Подробнее
+                             </button>
+                         </div>
+                     </div>
+                     <div class="col col-xxl-5">
+                         <div class="course-block">
+                             <img class="course-image" src="images/courses/course2.png"/>
+                             <p class="course-title">
+                                 Здоровые перекусы для энергии и вкуса
+                             </p>
+                             <p class="course-text">
+                                 В этом курсе мы научим вас приготовлению здоровых перекусов, которые помогут поддерживать вашу энергию и концентрацию в течение всего дня. Вы узнаете, какие продукты лучше всего подходят для перекусов и как правильно их комбинировать.
+                             </p>
+                             <button class="btn course-button">
+                                 Подробнее
+                             </button>
+                         </div>
+                     </div>
+                     <div class="col col-xxl-5">
+                         <div class="course-block">
+                             <img class="course-image" src="images/courses/course3.png"/>
+                             <p class="course-title">
+                                 Здоровый завтрак: энергия на целый день
+                             </p>
+                             <p class="course-text">
+                                 Узнайте, как правильно начать свой день с здорового завтрака, который даст вам энергию и питательные вещества на целый день. Мы расскажем вам о лучших завтраках для здоровья сердца, сбалансированных завтраках для веса и многом другом.
+                             </p>
+                             <button class="btn course-button">
+                                 Подробнее
+                             </button>
+                         </div>
+                     </div>
+                     <div class="col col-xxl-5">
+                         <div class="course-block">
+                             <img class="course-image" src="images/courses/course4.png"/>
+                             <p class="course-title">
+                                 Здоровые обеды на каждый день
+                             </p>
+                             <p class="course-text">
+                                 Узнайте, как приготовить сбалансированные и вкусные обеды, которые будут дарить вам энергию и радость. Мы поделимся с вами рецептами простых и быстрых обедов, которые подходят для занятого образа жизни.
+                             </p>
+                             <button class="btn course-button">
+                                 Подробнее
+                             </button>
+                         </div>
+                     </div>
+                     <div class="col col-xxl-5">
+                         <div class="course-block">
+                             <img class="course-image" src="images/courses/course5.png"/>
+                             <p class="course-title">
+                                 Здоровый ужин: вкусно и с пользой
+                             </p>
+                             <p class="course-text">
+                                 В этом курсе мы научим вас готовить здоровые и сытные ужины, которые помогут вам расслабиться и восстановить силы после долгого дня. Вы узнаете рецепты блюд для всей семьи, которые подарят вам удовольствие и пользу.
+                             </p>
+                             <button class="btn course-button">
+                                 Подробнее
+                             </button>
+                         </div>
+                     </div>
+                     <div class="col col-xxl-5">
+                         <div class="course-block">
+                             <img class="course-image" src="images/courses/course6.png"/>
+                             <p class="course-title">
+                                 Десерты без вреда для фигуры
+                             </p>
+                             <p class="course-text">
+                                 В этом курсе мы научим вас готовить сладости, которые будут не только вкусными, но и полезными для вашего тела. Вы узнаете о заменителях сахара, использовании здоровых жиров и других секретах создания десертов без вреда для фигуры.
+                             </p>
+                             <button class="btn course-button">
+                                 Подробнее
+                             </button>
+                         </div>
+                     </div>
                  </div>
              </div>
 
-             <div class="bonus d-flex flex-column align-items-center">
+
+             <div id="bonus" class="bonus mb-5 d-flex flex-column align-items-center">
                  <div class="bonus-title">
                      <p class="bonus-title-main">
                          Получите бесплатный курс
@@ -211,7 +228,7 @@
                      <div class="form-group col col-lg-5">
                          <input class="form-control" placeholder="Введите ваш email"/>
                      </div>
-                     <div class="ms-auto col col-lg-3 col-xxl-2">
+                     <div class="ms-auto col col-lg-3 col-xxl-2 mb-3 mb-lg-0">
                          <button class="btn btn-orange">
                              Отправить
                          </button>
@@ -224,11 +241,11 @@
                         Заполните форму и наш менеджер свяжется с вами. Все совершенно бесплатно!
                     </p>
                 </div>
-
              </div>
 
-             <div class="about container d-flex flex-column align-items-center">
-                 <div class="col-10 school-info">
+             <div id="about" class="about container mb-5 d-flex flex-column align-items-center gap-5">
+
+                 <div class="col-12 col-md-10 school-info">
                     <p class="school-info-title">
                         О школе
                     </p>
@@ -239,13 +256,131 @@
                          <img class="col col-lg-5 ms-auto" src="images/about_school.png"/>
                      </div>
                  </div>
+
+                 <div class="col-12 col-md-10 study-info">
+                     <p class="study-info-title mb-4">
+                         Форма обучения
+                     </p>
+                     <div class="row row-cols-2 row-cols-lg-3 gy-4">
+
+                         <div class="col">
+                             <div class="study-info-block">
+                                 <p class="study-info-block-title">
+                                     Видеоуроки
+                                 </p>
+                                 <p class="study-info-block-text">
+                                     Создание качественных видеоуроков, в которых наши преподаватели демонстрируют процесс приготовления блюд, объясняют техники и делятся полезными советами.
+                                 </p>
+                             </div>
+                         </div>
+
+                         <div class="col">
+                             <div class=" study-info-block">
+                                 <p class="study-info-block-title">
+                                     Интерактивные уроки
+                                 </p>
+                                 <p class="study-info-block-text">
+                                     Организация интерактивных занятий с возможностью участия в онлайн-голосованиях, обсуждениях и заданиях, чтобы стимулировать активное участие и углубление понимания материала.
+                                 </p>
+                             </div>
+                         </div>
+
+                         <div class="col">
+                             <div class=" study-info-block">
+                                 <p class="study-info-block-title">
+                                     Форумы и обсуждения
+                                 </p>
+                                 <p class="study-info-block-text">
+                                     Создание онлайн-форумов и сообществ, где ученики могут обмениваться опытом, задавать вопросы, обсуждать темы и делиться своими впечатлениями и рецептами.
+                                 </p>
+                             </div>
+                         </div>
+
+                         <div class="col">
+                             <div class=" study-info-block">
+                                 <p class="study-info-block-title">
+                                     Практические задания
+                                 </p>
+                                 <p class="study-info-block-text">
+                                     Давание практических заданий, таких как приготовление определенных блюд или разработка индивидуального плана питания.
+                                 </p>
+                             </div>
+                         </div>
+
+                         <div class="col">
+                             <div class=" study-info-block">
+                                 <p class="study-info-block-title">
+                                     Мастер-классы и вебинары
+                                 </p>
+                                 <p class="study-info-block-text">
+                                     Проведение вебинаров и мастер-классов, где ученики могут узнать о последних тенденциях в области здорового питания и получить дополнительные знания и навыки.
+                                 </p>
+                             </div>
+                         </div>
+
+                         <div class="col">
+                             <div class=" study-info-block">
+                                 <p class="study-info-block-title">
+                                     Индивидуальные консультации
+                                 </p>
+                                 <p class="study-info-block-text">
+                                     Предоставление возможности для индивидуальных консультаций с преподавателями для обсуждения личных целей, потребностей и вопросов учеников.
+                                 </p>
+                             </div>
+                         </div>
+                     </div>
+                 </div>
              </div>
 
+
+             <div id="reviews" class="reviews container mb-5 d-flex flex-column align-items-center">
+
+                 <div class="col-12 col-lg-10">
+                     <p class="reviews-title text-center text-lg-start">
+                         Отзывы клиентов
+                     </p>
+
+                     <div id="carouselExampleDark" class="carousel carousel-dark slide">
+                         <div class="carousel-indicators">
+                             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                         </div>
+
+                         <div class="carousel-inner">
+                             <div class="carousel-item active">
+                                 <img src="./images/reviews/review1.png" class="d-block w-100" alt="Отзыв 1">
+                             </div>
+                             <div class="carousel-item">
+                                 <img src="./images/reviews/review2.png" class="d-block w-100" alt="Отзыв 2">
+                             </div>
+                             <div class="carousel-item">
+                                 <img src="./images/reviews/review3.png" class="d-block w-100" alt="Отзыв 3">
+                             </div>
+                             <div class="carousel-item">
+                                 <img src="./images/reviews/review4.png" class="d-block w-100" alt="Отзыв 4">
+                             </div>
+                             <div class="carousel-item">
+                                 <img src="./images/reviews/review5.png" class="d-block w-100" alt="Отзыв 5">
+                             </div>
+                         </div>
+
+                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                         </button>
+                         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                         </button>
+                     </div>
+
+                 </div>
+             </div>
 
 
          </div>
      </main>
-
 
 
 
@@ -308,5 +443,4 @@
 
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
-
 </html>
