--- a/index.html
+++ b/index.html
@@ -253,7 +253,9 @@
                          <p class="col col-lg-6 school-info-text text-center text-lg-start">
                              "CookWell" - это уникальная школа, где мы делаем здоровое питание вкусным и доступным для всех. Наша миссия - вдохновить и помочь людям принять здоровый образ жизни через правильное питание и кулинарное мастерство.
                          </p>
-                         <img class="col col-lg-5 ms-auto" src="images/about_school.png"/>
+                         <div class="col col-lg-5 ms-auto">
+                            <img class="school-info-image" src="images/about_school.png"/>
+                         </div>
                      </div>
                  </div>
 
