--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                      <div class="form-group col col-lg-5">
                          <input class="form-control" placeholder="Введите ваш email"/>
                      </div>
-                     <div class="ms-auto col col-lg-3 col-xxl-2 mb-3 mb-lg-0">
+                     <div class="ms-auto col col-lg-3 mb-3 mb-lg-0">
                          <button class="btn btn-orange">
                              Отправить
                          </button>
