--- a/index.html
+++ b/index.html
@@ -221,19 +221,19 @@
                      </p>
                  </div>
 
-                 <div class="bonus-form col-12 row row-cols-1 row-cols-lg-3 gy-3 gy-lg-0">
+                 <form class="bonus-form col-12 row row-cols-1 row-cols-lg-3 gy-3 gy-lg-0">
                      <div class="form-group col col-lg-4 ">
-                         <input class="form-control" placeholder="Введите ваше имя"/>
+                         <input class="form-control" placeholder="Введите ваше имя" required/>
                      </div>
                      <div class="form-group col col-lg-5">
-                         <input class="form-control" placeholder="Введите ваш email"/>
+                         <input class="form-control" placeholder="Введите ваш email" required/>
                      </div>
                      <div class="ms-auto col col-lg-3 mb-3 mb-lg-0">
                          <button class="btn btn-orange">
                              Отправить
                          </button>
                      </div>
-                 </div>
+                 </form>
 
 
                 <div class="bonus-comment mt-2">
