--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                      <p class="study-info-title mb-4">
                          Форма обучения
                      </p>
-                     <div class="row row-cols-2 row-cols-lg-3 gy-4">
+                     <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 gy-4">
 
                          <div class="col">
                              <div class="study-info-block">
