--- a/index.html
+++ b/index.html
@@ -88,11 +88,9 @@
                     </p>
                 </div>
                 <div class="col-8 col-sm-6 col-lg-4 start-block-button">
-                    <button class="btn btn-orange">
-                        <a class="nav-link" href="#bonus">
-                            Получить бесплатный курс
-                        </a>
-                    </button>
+                    <a class="nav-link btn btn-orange" href="#bonus">
+                        Получить бесплатный курс
+                    </a>
                 </div>
             </div>
         </div>
