--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         Школа кулинарии и здорового питания "CookWell"
                     </p>
                 </div>
-                <div class="col-12 col-sm-10 col-lg-8 mb-1  mb-md-5 start-block-text">
+                <div class="col-12 col-sm-10 col-lg-8 mb-1  mb-md-5 start-block-text px-2">
                     <p>
                         Школа кулинарного мастерства "CookWell" - это место, где страсть к кулинарии сочетается с искусством здорового питания. Мы предлагаем интенсивные и увлекательные курсы, разработанные для тех, кто хочет расширить свои кулинарные горизонты, независимо от уровня опыта.
                     </p>
